Modify button text content

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <div id="windContainer"></div>
         </div>
         <div id="buttonContainer">
-          <button id="leftButton">Previous</button>
-          <button id="rightButton">Next</button>
+          <button id="leftButton">Previous Day</button>
+          <button id="rightButton">Next Day</button>
         </div>
       </div>
     </div>
